--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.3
   font_awesome_flutter: ^9.2.0
+  footer: ^0.0.4
 
 
 dev_dependencies:
