--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   url_launcher: ^6.0.3
   font_awesome_flutter: ^9.2.0
   footer: ^0.0.4
+  responsive_framework: ^0.1.7
+  flutter_screenutil: ^5.3.1
+  responsive_builder: ^0.4.2
+  sizer: ^2.0.15
 
 
 dev_dependencies:
