--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_screenutil: ^5.3.1
   responsive_builder: ^0.4.2
   sizer: ^2.0.15
+  easy_data_validator: ^1.0.1
+  rxdart: ^0.22.0
+  
 
 
 dev_dependencies:
