--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
   get:
-
+  
   objectbox: ^1.3.0
   objectbox_flutter_libs: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
   url_launcher: ^6.0.3
   font_awesome_flutter: ^9.2.0
   footer: ^0.0.4
@@ -45,10 +46,11 @@ dependencies:
   sizer: ^2.0.15
   easy_data_validator: ^1.0.1
   rxdart: ^0.22.0
-  google_fonts: ^2.3.0
+  google_fonts: ^2.1.1
   parse_server_sdk_flutter:
   keyboard_actions: "^3.4.7"
-
+  animate_do: ^2.1.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -56,12 +58,9 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.2
   build_runner: ^2.0.0
   objectbox_generator: any
+  
 
-flutter_icons:
-  image_path: "assets/logo.png"
-  android: true
-  ios: true
-  web: true
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -69,6 +68,13 @@ flutter_icons:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+
+flutter_icons:
+  image_path: "assets/images/logoMuevetePaquete.jpeg"
+  android: true
+  ios: true
+  web: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -98,16 +104,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-  
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto-Black.ttf
-        - asset: assets/fonts/Roboto-BlackItalic.ttf
-        - asset: assets/fonts/Roboto-Italic.ttf
-        - asset: assets/fonts/Roboto-Medium.ttf
-          style: italic
-          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
